[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-pose"
version = "0.2.2"
authors = [
    { name="Ryan Ly", email="rly@lbl.gov" },
    { name="Ben Dichter", email="bdichter@lbl.gov" },
    { name="Alexander Mathis", email="alexander.mathis@epfl.ch" },
    { name="Liezl Maree", email="lmaree@salk.edu" },
    { name="Chris Brozdowski", email="Chris.Broz@ucsf.edu" },
    { name="Heberto Mayorquin", email="h.mayorquin@gmail.com" },
    { name="Talmo Pereira", email="talmo@salk.edu" },
    { name="Elizabeth Berrigan", email="eberrigan@salk.edu" },
]
description = "NWB extension to store pose estimation data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=2.6.0",
    "hdmf>=3.13.0",
]

[project.optional-dependencies]
test = [
    "coverage>=7.5.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-subtests>=0.12.1",
    "python-dateutil>=2.8.2",
]

docs = [
    "hdmf-docutils>=0.4.7",
]

dev = [
    "black>=24.4.2",
    "codespell>=2.3.0",
    "pre-commit>=3.5.0",
    "ruff>=0.4.10",
    "ndx-pose[docs,test]",
]

# minimum requirements of project dependencies for testing (see .github/workflows/run_all_tests.yml)
min-reqs = [
    "pynwb==2.6.0",
    "hdmf==3.13.0",
]

# TODO: add URLs before release
[project.urls]
"Homepage" = "https://github.com/rly/ndx-pose"
# "Documentation" = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/rly/ndx-pose/issues"
# "Discussions" = "https://github.com/organization/package/discussions"
"Changelog" = "https://github.com/rly/ndx-pose/blob/main/CHANGELOG.md"

# Include only the source code under `src/pynwb/ndx_pose` and the spec files under `spec`
# in the wheel.
[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_pose",
    "spec"
]

# Rewrite the path to the `spec` directory to `ndx_pose/spec`.
# `ndx_pose/__init__.py` will look there first for the spec files.
# The resulting directory structure within the wheel will be:
# ndx_pose/
# ├── __init__.py
# ├── spec
[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_pose/spec"

# The source distribution includes everything in the package, 
# except for the `src/matnwb` directory, git and github-related files,
# auto-generated docs, and build artifacts.
[tool.hatch.build.targets.sdist]
ignore-vcs = true
exclude = [
    ".git*",
    "src/matnwb",
    "docs/source/_format_auto_docs",
    "build",
    "*.egg-info/",
]


[tool.pytest.ini_options]
# uncomment below to run pytest with code coverage reporting. NOTE: breakpoints may not work
# addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,hdmf-common-schema,./docs/_build/*,*.ipynb"

[tool.coverage.run]
branch = true
source = ["src/pynwb"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
enable-unstable-feature = ["string_processing"]
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
lint.select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "docs/source/conf.py",
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/pynwb/ndx_pose/__init__.py" = ["E402", "F401"]
"src/pynwb/ndx_pose/io/__init__.py" = ["F401"]
"src/spec/create_extension_spec.py" = ["T201"]
"examples/*" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 17
